<resources>
    <string name="app_name">rayse</string>
    <string name="titles.NowActivity">Now</string>
    <string name="titles.LoginActivity">Welcome</string>
    <string name="titles.TutorialActivity">Welcome</string>
    <string name="titles.CalendarActivity">My Week</string>
    <string name="titles.DataActivity">My Data</string>
    <string name="title_activity_tutorial">rayse</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_navigation">rayse</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Add new stuff here -->
    <string name="nav_now_title">Now</string>
    <string name="nav_calendar_title">Calendar</string>
    <string name="nav_today_title">Today</string>
    <string name="nav_week_title">Last week</string>
    <string name="nav_month_title">Last month</string>
    <string name="nav_accomplishments_title">My Achievements</string>
    <string name="nav_notifications_title">Watch notification</string>

    <string name="signin">Sign in</string>
    <string name="signin_bad_confirm">Passwords do not match</string>
    <string name="signup">Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="settings_bad_time">Please enter a number (hour) between 0 and 23</string>

    <string name="welcome_achievment">Welcome</string>
    <string name="welcome_text">Sign up for rayse</string>
    <string name="schedule_achievement">On Schedule</string>
    <string name="schedule_text">Link your calendar to rayse</string>
    <string name="day_achievment">Daylight</string>
    <string name="day_text">Meet your goal for a day</string>
    <string name="three_day_achievement">Third Time\'s a Charm</string>
    <string name="three_day_text">Meet your goal three days in a row</string>
    <string name="five_day_achievement">Straight</string>
    <string name="five_day_text">Meet your goal five days in a row</string>
    <string name="week_achievement">A Strong Week</string>
    <string name="week_text">Meet your goal every day for a week</string>
    <string name="month_achievement">Mega Month</string>
    <string name="month_text">Meet your goal every day for a month</string>
    <string name="fifty_achievement">Silver Dollar</string>
    <string name="fifty_text">Meet your goal on fifty days</string>
    <string name="hundred_achievement">Grand Slam</string>
    <string name="hundred_text">Meet your goal on one hundred days</string>
    <string name="sunrise_achievement">Early Bird</string>
    <string name="sunrise_text">Get thirty minutes of sun within an hour of sunrise</string>
    <string name="sunset_achievement">Night Owl</string>
    <string name="sunset_text">Get thirty minutes of sun within an hour before sunset</string>
    <string name="time_achievement">In the Nick of Time</string>
    <string name="time_text">Meet your goal within fifteen minutes of sunset</string>
    <string name="no_sun_achievement">Dark Ages</string>
    <string name="no_sun_text">Get no sun during one day</string>
    <string name="overachiever_achievement">Overachiever</string>
    <string name="overachiever_text">Get 150% of your target sunlight on a day</string>
    <string name="achievement_achievement">Lucky Number</string>
    <string name="achievement_text">Complete seven achievements</string>

    <!-- calendar stuff-->
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
